@@ -25,7 +25,7 @@ input#generator_limit		{color:#000; background-color:#fff; padding:8px 3px; bord
 #result_span			{font-size:3em;}
 #filter_span			{font-size:3em; display:none;}
 
-#view_search_test		{margin:0 auto; width:960px; padding:15px 0 40px 0;}
+#view_search_test		{margin:0 auto; width:960px; padding:0 0 40px 0; margin-top:-10px;}
 input#view_search_string, input#view_search_string_only, input.typeahead.tt-hint	{font-size:28px; width:936px; height:48px; border:0; margin-top:10px;}
 .search_wrap			{display:inline-block; width:290px; margin-bottom:15px; min-height:50px;}
 .search_wrap.mid		{margin-left:20px; margin-right:20px;}
