@@ -184,10 +184,6 @@
 				<option value="flava=original">{flava_choose_text}</option> 
 				<option value="flava=original">{flava_original_text}</option> 
 				<option value="flava=high">{flava_high_visibility_text}</option>
-				<option value="rgba=mustard">Mustard</option>
-				<option value="rgba=inspire">Inspire</option>
-				<option value="rgba=grey">Grey</option>
-				<option value="rgba=orange_teal">Orange Teal</option>
 			</select>
 			</form>
 		</td>
