@@ -324,6 +324,7 @@
 </style>
 </div>
 
+#donor_graph2
 
 #sector_graph
 <div class="default graph" id="sector_graph_all">
@@ -382,6 +383,7 @@
 </style>
 </div>
 
+#sector_graph2
 
 #countries_graph
 <div class="default graph" id="countries_graph_all" >
@@ -438,6 +440,8 @@
 	}
 </style>
 </div>
+
+#countries_graph2
 
 #publisher_countries_graph
 <div class="default">
