@@ -287,7 +287,7 @@
 			<tr>
 				<td>FAQ</td>
 				<td>{sources_data9_text}</td>
-				<td>{sources_data10_text} <a href="https://www.aidtransparency.net/governance/secretariat/iati-technical-team">IATI Technical Team</a></td>
+				<td>{sources_data10_text} IATI Technical Team</td>
 			</tr>
 		</table>
 	</div>
