@@ -1,3 +1,10 @@
+Development Portal (2020-04-20 shi)
+==============================
+Update theme settings
+Move search2 to front page
+Update css
+
+
 Development Portal (2020-04-18 shi)
 ==============================
 Update glossary
